java复习过程中遇到的问题

--- a/疑难杂症.md
+++ b/疑难杂症.md
@@ -523,7 +523,7 @@ public static ResultSet query2(String name) throws ClassNotFoundException, SQLEx
 
 ### 问题17：如果觉得普通的互斥锁和sychronized效率比较低我们该怎么做？
 
-> 读写锁、悲观锁
+> 读写锁、乐观锁
 
 ### 问题18：
 
@@ -999,6 +999,120 @@ class Test{
 >         System.out.println(f);                  
 > 
 >         //答案：big keng。4.duan cheng duan  to  be  int，so c1.equals jieguo  is  false。//5 6，first is fudian  or int。
+>     }
+> }
+> ```
+>
+
+### 问题39. 单例对象中注入多例对象属性
+
+> 有一个Spring配置文件，我在里面填入什么，能实现每次获取这个单例对象里面的这个多例对象都是不同的？
+> ==使用lookup-method标签 属性都是一样的==
+>
+> ```xml
+>     <bean id="user" class="com.spring.pojo.User" >
+>         <property name="name" value="123"/>
+>         <property name="id" value="1"/>
+>         <property name="money" value="10.0"/>
+>          ？？？？？？？？？？？？？？？？？？？？ 
+>     </bean>
+>     <bean id="childUser" class="com.spring.pojo.User" scope="prototype">
+>     </bean>
+> ```
+>
+> ```java
+> public class User {
+>     private Integer id;
+>     private String name;
+>     private Double money;
+>     private User child;
+> }
+> ```
+
+### 问题40. 方法重载和多态
+
+```java
+class A {
+    public void f1() {
+        System.out.println("1");
+    }
+    public void f1(int a) {
+        System.out.println(a);
+    }
+}
+
+class B extends A{
+    public void f1() {
+        System.out.println("3");
+    }
+    public void f1(int a) {
+        System.out.println(a+1);
+    }
+    public void f2() {
+        System.out.println("4");
+    }
+
+    public static void main(String[] args) {
+        A b = new B();
+        b.f1();  //3
+        b.f1(1); //2
+        b.f2();  //错误
+    }
+}
+```
+
+### 问题41. Httpservlet中重写init方法
+
+> 没有调用父类的init，会导致没有Servlet没有被正确初始化，导致配置信息丢失
+>
+> ```java
+> public class DDUserController extends HttpServlet {
+>     private UserDao ud = new UserDaoImpl();
+>     private List<DDServicePackage> splist = new ServicePackageDaoImpl().getServicePackages();
+>     private String charsetEncoding;
+> 
+> 
+>     @Override
+>     public void init(ServletConfig config) throws ServletException {
+>         //没有调用父类的init，会导致没有Servlet没有被正确初始化，导致配置信息丢失
+>         //HttpServlet中获取全局参数
+>         charsetEncoding = config.getServletContext().getInitParameter("charsetEncoding");
+>         System.out.println("初始化函数被调用");
+>     }
+> 
+> 
+> //    @Override
+> //    public void init(ServletConfig config) throws ServletException {
+> //        super.init(config);
+> //        //HttpServlet中获取全局参数
+> //        charsetEncoding = config.getServletContext().getInitParameter("charsetEncoding");
+> //        System.out.println("初始化函数被调用");
+> //    }
+> 
+>     @Override
+>     protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+>         //super.doGet(req, resp); //一定要去掉因为父类的doGet方法什么都没有做
+> 
+>         //HttpServlet中获取全局参数
+>         String charsetEncoding3 = getServletConfig().getServletContext().getInitParameter("charsetEncoding");
+>         String charsetEncoding4 = req.getServletContext().getInitParameter("charsetEncoding");
+>         if(charsetEncoding3 == charsetEncoding4) {
+>             System.out.println("相等");
+>         }
+>         //HttpServlet中获取初始化参数
+>         String charsetEncoding1 = getServletConfig().getInitParameter("charsetEncoding");
+>         String charsetEncoding2 = getInitParameter("charsetEncoding");
+>         System.out.println(charsetEncoding2);
+>         System.out.println(charsetEncoding1);
+>         if(charsetEncoding1 == charsetEncoding2) {
+>             System.out.println("相等");
+>         }
+>     }
+>     
+>     @Override
+>     protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+>         doGet(req, resp);
+>         //super.doPost(req, resp); //一定要去掉不去掉会包405 或 500状态码
 >     }
 > }
 > ```
